[gd_scene load_steps=15 format=2]

[ext_resource path="res://NPCs/Npc6.atlastex" type="Texture" id=1]
[ext_resource path="res://NPCs/Npc7.atlastex" type="Texture" id=2]
[ext_resource path="res://NPCs/NPC1.gd" type="Script" id=3]
[ext_resource path="res://Player_2/question_mark_PNG22.png" type="Texture" id=4]
[ext_resource path="res://NPCs/Npc1.atlastex" type="Texture" id=5]
[ext_resource path="res://NPCs/Npc2.atlastex" type="Texture" id=6]
[ext_resource path="res://NPCs/Npc4.atlastex" type="Texture" id=7]
[ext_resource path="res://NPCs/Npc3.atlastex" type="Texture" id=8]
[ext_resource path="res://NPCs/Dialog.tscn" type="PackedScene" id=9]
[ext_resource path="res://addons/github-integration/fonts/Roboto-Regular.ttf" type="DynamicFontData" id=10]

[sub_resource type="DynamicFont" id=4]
size = 9
font_data = ExtResource( 10 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "walkleft",
"speed": 2.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "walkright",
"speed": 2.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 22.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 5.0
height = 6.0

[node name="NPC1" type="KinematicBody2D"]
position = Vector2( 260, 79 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="CanvasLayer" parent="." instance=ExtResource( 9 )]

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = -20.0
margin_top = 10.0
margin_right = 30.0
margin_bottom = 24.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.705882, 0.560784, 0.164706, 1 )
custom_fonts/normal_font = SubResource( 4 )
text = "Interact (E)"

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -2 )
scale = Vector2( 0.486111, 0.486111 )
frames = SubResource( 1 )
animation = "Idle"

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="IdleWait" type="Timer" parent="."]
autostart = true

[node name="QuestionMark" type="Sprite" parent="."]
position = Vector2( 0, -18 )
scale = Vector2( 0.0134375, 0.011875 )
texture = ExtResource( 4 )

[node name="WalkRightTimer" type="Timer" parent="."]
wait_time = 7.0
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="IdleWait" to="." method="_on_IdleWait_timeout"]
[connection signal="timeout" from="WalkRightTimer" to="." method="_on_WalkRightTimer_timeout"]

[editable path="CanvasLayer"]
